# windows-dll-compat-checker

./: Cargo.toml  README.md  generate_ini_from_windows_folder.sh
.github/workflows/: build.yml  release.yml
premade_ini/: README.md  konami_win7_museca_x86_64.ini  konami_win7_museca_x86_64_32bit_dlls.ini  konami_win7_museca_x86_64_common.ini  konami_winxp_jubeat_i686.ini  windows_base.ini  winxp_x86_64.ini  winxp_x86_64_32bit_dlls.ini  winxp_x86_64_common.ini
src/: ini.rs  main.rs  pe.rs  types.rs
test_libs/: Makefile  build.sh  build_docker.sh  test_input.c  test_input_exe.c  test_system.c  test_system.def  test_system_import.def  test_transitive.c  test_transitive.def  test_transitive_import.def
test_libs/extend/: base.ini  mid.ini  top.ini
test_libs/partial/: test_system.c  test_system.def
tests/: integration.rs
